--- a/blog.html
+++ b/blog.html
@@ -25,15 +25,15 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="">OUR NFTs</a></li>
-                    <li><a href="">BLOG</a></li>
+                    <li><a href="our-nfts.html">OUR NFTs</a></li>
+                    <li><a href="blog.html">BLOG</a></li>
                     <li><a href="">CONTACT US</a></li>
                 </ul>
             </div>
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </nav>
 
-        <h1> Blog</h1>
+        <h1>Our Blog</h1>
     </section>
 
     <!-- blog content -->
@@ -41,11 +41,43 @@
     <section class="blog-content">
 
         <div class="row">
-            <div class="blog-right">
-                <img src="images/certificate.jpg" alt="">
-                <h2> our certificate and online programs for 2021</h2>
+            <div class="blog-left">
+                <img src="images/worldgrid.JPG" alt="">
+                <h2>world grid the ep - july 2022</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit optio quo fuga debitis dolores laboriosam itaque officia? Reiciendis dignissimos, velit neque obcaecati repellendus quas esse molestiae, enim exercitationem modi quo expedita sunt nisi ad deleniti cumque ipsum impedit minus ipsam illum excepturi totam libero optio? Aliquam ullam modi alias consequatur.</p>
+                <br>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, accusamus mollitia? Rem accusamus omnis optio reprehenderit, repudiandae nemo soluta nobis praesentium quidem dolorum possimus similique impedit corrupti accusantium velit magnam ducimus tempora, natus deleniti quo aspernatur provident. Beatae, itaque. Alias laudantium voluptates ea impedit voluptatibus, doloremque earum reiciendis temporibus est sint, quia a, accusamus neque quisquam cum molestiae? Velit voluptate ipsum perspiciatis maxime porro officia modi amet consequatur, repellat vero!</p>
+                <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptates est reiciendis deleniti et vitae cumque iure minus earum ipsam. Similique velit dolor commodi dolores neque veniam explicabo eaque pariatur. Eos temporibus maiores earum architecto enim voluptatibus? Eos est omnis dignissimos dicta consequuntur reiciendis vitae, quae recusandae quam eius adipisci.</p>
             </div>
-            <div class="blog-left "></div>
+
+            <div class="comment-box">
+
+                <h3>Leave a comment</h3>
+
+                <form action="" class="comment-form">
+
+                    
+                </form>
+            </div>
+
+
+
+
+
+            <div class="blog-right">
+                <h3>benefits of whitelist</h3>
+                <div class="benefit">
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim dolores illum dicta. </li>
+                        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, ipsum! </li>
+                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste. </li>
+                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates repudiandae hic repellendus officia? </li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing. </li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda reiciendis enim distinctio doloribus nulla. </li>
+                    </ul>
+                </div>
+            </div>
 
 
         </div>
@@ -87,30 +119,6 @@
     
 
 
-   <script>
-    var nav = document.getElementById("nav");
-
-function showMenu(){
-    nav.style.display = "block"
-}
-function hideMenu(){
-    nav.style.display = "none"
-}
-
-
-
-
-const nav = document.getElementById("nav")
-
-window.onscroll = function(){ 
-    if(document.body.scrollTop>=150)
-    {nav.classList.add("colorNav")
-}
-
-    else{nav.classList.remove("colorNav")}
-}
-
-   </script>
-   s
+     <script src="js/index.js"></script>
 </body>
 </html>
