--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="">OUR NFTs</a></li>
-                    <li><a href="">BLOG</a></li>
+                    <li><a href="our-nfts.html">OUR NFTs</a></li>
+                    <li><a href="blog.html">BLOG</a></li>
                     <li><a href="">CONTACT US</a></li>
                 </ul>
             </div>
@@ -85,30 +85,8 @@
     
 
 
-   <script>
-    var nav = document.getElementById("nav");
-
-function showMenu(){
-    nav.style.display = "block"
-}
-function hideMenu(){
-    nav.style.display = "none"
-}
-
-
-
-
-const nav = document.getElementById("nav")
-
-window.onscroll = function(){ 
-    if(document.body.scrollTop>=150)
-    {nav.classList.add("colorNav")
-}
-
-    else{nav.classList.remove("colorNav")}
-}
-
-   </script>
-   s
+   
+   
+ <script src="js/index.js"></script>
 </body>
 </html>
