--- a/our-nfts.html
+++ b/our-nfts.html
@@ -17,30 +17,38 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="sub-header">
-        <nav>
+    <nav class="navContainer">
+        <div class="logo-menu">
             <a href="index.html"><img src="images/m4 empire .png" alt=""></a>
-            <div class="nav" id="nav">
-                <i class="fas fa-times" onclick="hideMenu()"></i>
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="our-nfts.html">OUR NFTs</a></li>
-                    <li><a href="blog.html">BLOG</a></li>
-                    <li><a href="">CONTACT US</a></li>
-                </ul>
-            </div>
-            <i class="fas fa-bars" onclick="showMenu()"></i>
-        </nav>
+            <div id="menu-btn"></div>
+        </div>
+        <div class="nav" id="nav">
+            <i class="fas fa-times" onclick="hideMenu()"></i>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="about.html">ABOUT US</a></li>
+                <li><a href="our-nfts.html">OUR NFTs</a></li>
+                <li><a href="blog.html">BLOG</a></li>
+                <li><a href="contact-us.html">CONTACT US</a></li>
+            </ul>
+        </div>
+        <i class="fas fa-bars" onclick="showMenu()"></i>
+    </nav>
+    <section class="sub-header">
+        
 
-        <h1> Our NFTs</h1>
+        <div class="text-box">
+           <h1>our NFTs</h1>
+        </div>
+
+
     </section>
 
     <!-- our nfts content -->
 
     <section class="our-nfts" id="our-nfts">
         <h1>our company NFTs</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, expedita.</p>
+        <p>are you well inclined with NFTs and would you love to invest, here below are our NFTs collection</p>
 
         <div class="row">
             <div class="box">
@@ -49,7 +57,7 @@
                     <span>PFN - pray for nigeria</span>
                     <h3>$18.93 USD</h3>
                     <div class="share">
-                        <a href="#" class="our-nfts-btn">view details</a>
+                        <a href="https://m4-empire-s-nft-collection92.curios.com/nft/0xf157b1011d9fed3d73348ae4962471c017c95dfb" target="_blank" class="our-nfts-btn">view details</a>
                     </div>
                 </div>
             </div>
@@ -59,7 +67,8 @@
                     <span>connecting lagos</span>
                     <h3>$124.77 USD</h3>
                     <div class="share">
-                        <a href="#" class="our-nfts-btn">view details</a>
+                        <a href="https://m4-empire-s-nft-collection92.curios.com/nft/0xc3cf396907a036a9172fc9fcf77650c279dd98b9"
+                        target="_blank" class="our-nfts-btn">view details</a>
                     </div>
                 </div>
             </div>
@@ -69,7 +78,8 @@
                     <span>proudly african</span>
                     <h3>$18.93 USD</h3>
                     <div class="share">
-                        <a href="#" class="our-nfts-btn">view details</a>
+                        <a href="https://m4-empire-s-nft-collection92.curios.com/nft/0x39b0e488d262e736e180d2debc0d264857639fc8"
+                        target="_blank" class="our-nfts-btn">view details</a>
                     </div>
                 </div>
             </div>
@@ -79,7 +89,8 @@
                     <span>alpha</span>
                     <h3>$114.09 USD</h3>
                     <div class="share">
-                        <a href="#" class="our-nfts-btn">view details</a>
+                        <a href="https://m4-empire-s-nft-collection92.curios.com/nft/0x390a452ac5b4655b709df89c9d284929225d4e2a"
+                        target="_blank" class="our-nfts-btn">view details</a>
                     </div>
                 </div>
             </div>
@@ -89,7 +100,8 @@
                     <span>Space kid</span>
                     <h3>coming soon</h3>
                     <div class="share">
-                        <a href="#" class="our-nfts-btn">view details</a>
+                        <a href="https://m4-empire-s-nft-collection92.curios.com/nft/0x3034ec78f196f537ff313e7da2c8807a55267bb4"
+                        target="_blank" class="our-nfts-btn">view details</a>
                     </div>
                 </div>
             </div>
@@ -99,7 +111,8 @@
                     <span>serene</span>
                     <h3>coming soon</h3>
                     <div class="share">
-                        <a href="#" class="our-nfts-btn">view details</a>
+                        <a href="https://m4-empire-s-nft-collection92.curios.com/nft/0x08a792dc40c68126b100f35c9ea81fc80a477fbb"
+                        target="_blank" class="our-nfts-btn">view details</a>
                     </div>
                 </div>
             </div>
@@ -123,9 +136,9 @@
 
      <section class="footer">
         <h4>about us</h4>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur possimus tempore error commodi <br> quidem repudiandae! Recusandae odio amet vel incidunt excepturi corporis.</p>
+        <p>to know more about us visit our social media pages, we hope we get to see you soon</p>
         <div class="icons">
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            
             <a href=""><i class="fa-brands fa-instagram"></i></a>
             <a href=""><i class="fa-brands fa-twitter"></i><a>           
             <a href=""><i class="fa-brands fa-youtube"></i></a>      
